# airepo

./: Dockerfile  README.md  pyproject.toml
src/airepo/: __init__.py  __main__.py  cli.py  config.py  gemini.py  generate.py  github.py  prompts.py  scrape.py
