[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airepo"
version = "0.1.0"
description = "A CLI to scrape and fork AI-generated GitHub repos, or generate new projects via a remote OpenCode server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "airepo" },
]
keywords = ["ai", "github", "cli", "fork", "scrape"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "requests>=2.31",
    "google-genai>=1.0",
    "questionary>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
airepo = "airepo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
